--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       POSTGRES_PASSWORD: 123456
       POSTGRES_USER: postgres
+      POSTGRES_DB: pagila     # ✅ Kjo e bën 'pagila' databazën default
     volumes:
       - ./pagila-schema.sql:/docker-entrypoint-initdb.d/1-pagila-schema.sql
       - ./pagila-schema-jsonb.sql:/docker-entrypoint-initdb.d/1-pagila-schema-jsonb.sql
@@ -20,6 +21,7 @@ services:
       - 5432
     ports:
       - 5432:5432
+
   pgadmin:
     container_name: pgadmin4
     image: dpage/pgadmin4
@@ -32,4 +34,3 @@ services:
       - "./pgadmin/pgadmin_pass:/pgadmin4/pass"
     ports:
       - "5050:80"
-   
